# v-authorization

./: Cargo.toml  README.md
doc/: auth-algorithm-doc.md  dev-doc.md
src/: authorization.rs  authorize_obj_group.rs  common.rs  formats.rs  prepare_obj_group.rs  record_formats.rs  trace.rs
tests/: README.md  advanced_patterns.rs  authorization_patterns.rs  authorize_obj_group_tests.rs  core_authorization.rs  edge_cases.rs  group_management.rs  integration_scenarios.rs  permission_filters.rs  prepare_obj_group_tests.rs  specialized_authorization.rs
tests/common/: mod.rs
