[package]
name = "v_authorization"
version = "0.1.3"
authors = ["itiu <ValeriyBushenev@gmail.com>", "muller95 <muller95@yandex.ru>"]
edition = "2018"
description = "authorization lib"
repository = "https://github.com/semantic-machines/v_authorization"
license = "MIT"

[lib]
path = "src/authorization.rs"
