[package]
name = "v_authorization"
version = "0.5.0"
authors = ["itiu <ValeriyBushenev@gmail.com>", "muller95 <muller95@yandex.ru>"]
edition = "2021"
description = "authorization lib"
repository = "https://github.com/semantic-machines/v_authorization"
license = "MIT"

[lib]
path = "src/authorization.rs"

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.5.3"
serde_json = "1.0"
